# 86Box

.github/workflows/: cmake_windows_msys2.yml
cmake/: llvm-win32-x86_64.cmake
src/: 86box.c  CMakeLists.txt  config.c  device.c  dma.c  edid_parse.cpp  io.c  nvr_at.c  nvr_ps2.c  pci.c  pcmcia.c  pic.c  port_92.c  usb.c
src/cdrom/: cdrom.c  cdrom_mitsumi.c
src/chipset/: ali1543.c  intel_piix.c  intel_sio.c  sis_5571.c  sis_5571_h2p.c  sis_5572_usb.c  sis_5581_h2p.c  stpc.c  via_pipc.c
src/codegen/: codegen_ops.c
src/codegen_new/: codegen_ops.c
src/cpu/: 386.c  386_common.c  386_common.h  386_dynarec.c  CMakeLists.txt  cpu.c  cpu.h  cpu_table.c  ppcglue.cpp  x86.c
src/device/: CMakeLists.txt  isapnp.c  keyboard.c  keyboard_at.c  keyboard_xt.c  mouse.c  mouse_ps2.c  mpc105.c  port_8xx_ppc.c
src/disk/: mo.c  rdisk.c  zip.c
src/machine/: m_at_misc.c  m_at_socket7.c  m_at_socket7_3v.c  m_at_socket8.c  m_ps2_isa.c  machine_table.c
src/mem/: intel_flash.c  mem.c  rom.c  sst_flash.c
src/network/: CMakeLists.txt  net_3c509.c  net_ne2000.c  net_tulip.c  network.c
src/pcmcia/: pcmcia_socket_pd6710.c
src/pearpc/: CMakeLists.txt  info.h  uaeglue.cpp
src/pearpc/cpu/cpu_generic/: ppc_cpu.cpp  ppc_cpu.h  ppc_mmu.cpp  ppc_mmu.h  ppc_opc.cpp
src/pearpc/system/: types.h
src/pearpc/system/arch/x86_64/: sysendian.h
src/pearpc/uae/: ppc.h
src/qt/: 86Box-qt.rc  CMakeLists.txt  qt_dummygl.cpp  qt_dummygl.hpp  qt_main.cpp  qt_mainwindow.cpp  qt_mainwindow.ui  qt_mediahistorymanager.cpp  qt_platform.cpp  qt_vmmanager_preferences.ui
src/scsi/: scsi.c  (+3 more)
(+47 files in other folders)
